<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lw003_v3_grey_f2f2f2"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/lw003_v3_blue_2f84d0">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:drawableLeft="@drawable/lw003_v3_ic_back"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:onClick="onBack"
            android:paddingLeft="16dp"
            android:text=""
            android:textColor="@color/lw003_v3_white_ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/payload_contents_selection"
            android:textColor="@color/lw003_v3_white_ffffff"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:onClick="onSave"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/lw003_v3_ic_save"
            android:visibility="gone" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lw003_v3_grey_f2f2f2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/lw003_v3_white_ffffff"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableRight="@drawable/lw003_v3_ic_arrow_right"
                android:gravity="center_vertical"
                android:onClick="onIBeaconContent"
                android:text="@string/payload_ibeacon_content"
                android:textColor="@color/lw003_v3_black_333333"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View style="@style/lw003_v3_divider_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableRight="@drawable/lw003_v3_ic_arrow_right"
                android:gravity="center_vertical"
                android:onClick="onEddystoneUIDContent"
                android:text="@string/payload_eddystone_uid_content"
                android:textColor="@color/lw003_v3_black_333333"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View style="@style/lw003_v3_divider_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableRight="@drawable/lw003_v3_ic_arrow_right"
                android:gravity="center_vertical"
                android:onClick="onEddystoneURLContent"
                android:text="@string/payload_eddystone_url_content"
                android:textColor="@color/lw003_v3_black_333333"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View style="@style/lw003_v3_divider_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableRight="@drawable/lw003_v3_ic_arrow_right"
                android:gravity="center_vertical"
                android:onClick="onEddystoneTLMContent"
                android:text="@string/payload_eddystone_tlm_content"
                android:textColor="@color/lw003_v3_black_333333"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View style="@style/lw003_v3_divider_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableRight="@drawable/lw003_v3_ic_arrow_right"
                android:gravity="center_vertical"
                android:onClick="onBXPIBeaconContent"
                android:text="@string/payload_bxp_ibeacon_content"
                android:textColor="@color/lw003_v3_black_333333"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View style="@style/lw003_v3_divider_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableRight="@drawable/lw003_v3_ic_arrow_right"
                android:gravity="center_vertical"
                android:onClick="onBXPDeviceInfoContent"
                android:text="@string/payload_bxp_device_info_content"
                android:textColor="@color/lw003_v3_black_333333"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View style="@style/lw003_v3_divider_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableRight="@drawable/lw003_v3_ic_arrow_right"
                android:gravity="center_vertical"
                android:onClick="onBXPAccContent"
                android:text="@string/payload_bxp_acc_content"
                android:textColor="@color/lw003_v3_black_333333"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View style="@style/lw003_v3_divider_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableRight="@drawable/lw003_v3_ic_arrow_right"
                android:gravity="center_vertical"
                android:onClick="onBXPTHContent"
                android:text="@string/payload_bxp_th_content"
                android:textColor="@color/lw003_v3_black_333333"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View style="@style/lw003_v3_divider_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableRight="@drawable/lw003_v3_ic_arrow_right"
                android:gravity="center_vertical"
                android:onClick="onBXPButtonContent"
                android:text="@string/payload_bxp_button_content"
                android:textColor="@color/lw003_v3_black_333333"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View style="@style/lw003_v3_divider_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableRight="@drawable/lw003_v3_ic_arrow_right"
                android:gravity="center_vertical"
                android:onClick="onBXPTagContent"
                android:text="@string/payload_bxp_tag_content"
                android:textColor="@color/lw003_v3_black_333333"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View style="@style/lw003_v3_divider_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableRight="@drawable/lw003_v3_ic_arrow_right"
                android:gravity="center_vertical"
                android:onClick="onOtherTypeContent"
                android:text="@string/payload_other_type_content"
                android:textColor="@color/lw003_v3_black_333333"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>