<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f2f2f2"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_ble_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white_ffffff"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_ble_settings"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:drawableRight="@drawable/ic_arrow_right"
                android:gravity="center_vertical"
                android:onClick="onBleSettings"
                android:text="@string/lw003_v3_general_ble_settings"
                android:textColor="@color/black_333333"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_th_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white_ffffff"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_ble_settings">

            <TextView
                android:id="@+id/tv_th_settings"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:drawableRight="@drawable/ic_arrow_right"
                android:gravity="center_vertical"
                android:onClick="onTHSettings"
                android:text="@string/general_th_settings"
                android:textColor="@color/black_333333"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_on_off_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white_ffffff"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_th_settings">

            <TextView
                android:id="@+id/tv_on_off_settings"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:drawableRight="@drawable/ic_arrow_right"
                android:gravity="center_vertical"
                android:onClick="onOnOffSettings"
                android:text="@string/general_on_off_settings"
                android:textColor="@color/black_333333"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white_ffffff"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_on_off_settings">

            <CheckBox
                android:id="@+id/cb_continuity_transfer_function"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:button="@null"
                android:checked="false"
                android:clickable="true"
                android:drawableRight="@drawable/selector_cb_btn"
                android:gravity="center_vertical"
                android:text="@string/general_continuity_transfer_function"
                android:textColor="@color/black_333333"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/general_continuity_transfer_function_tips"
                android:textColor="@color/black_333333"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cb_continuity_transfer_function" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>